# NSU_labs_EVM_3-semester

lab1/: GraphHandler.py  PiCalculation.cpp  SinCalculation.cpp  compile_and_run.sh  create_table.sh  lab1_SorokinM_23201.docx  lab1_SorokinM_23201.tex  report.csv  sin
lab10/: lab10_SorokinM_23201.odt  subtask1.cpp  subtask1.h  subtask2.cpp  subtask3.cpp  subtask3_pthread.cpp
lab2/: ExponentCalculation.cpp  GraphHandler.cpp  GraphHandler.py  PiCalculation.cpp  compile_and_run.sh  create_table.sh  lab2_SorokinM_23201.docx  lab2_SorokinM_23201.tex
lab3/: PiCalculation.cpp  SinCalculation.cpp  lab3_SorokinM_23201.docx  lab3_SorokinM_23201.tex  res_x86  res_x86-64  res_x86-64_opt
lab4/: LogCalculation.cpp  LogCalculation.s  PiCalculation.cpp  lab4_SorokinM_23201.docx
lab5/: lab5_SorokinM_23201.docx  main.cpp
lab6/: CMakeLists.txt  main.cpp
lab7/: MatrixTest.cpp  Report_plan.txt  blas  blas_matrix_mult.cpp  lab7_SorokinM_23201.docx  lab7_SorokinM_23201.odt  main_blas.cpp  main_blas.h  main_no_vectorisation.cpp  main_no_vectorisation.h  main_no_vectrotisation.cpp  main_no_vectrotisation.h  main_vectorisation.cpp  main_vectorisation.h  main_vectrotisation.cpp  matrixtest.cpp  no_vector_cachegrind  run.sh  vector_cachegrind
lab8/: GraphHandler.py  a.out  forward_result.txt  log.txt  main.cpp  main2.cpp  random_l1.txt  random_l2.txt  random_l2_2.txt  random_result.txt  reverse_result.txt  run_plot.sh  run_simple_plot.sh
lab9/: a.out  graph_handler.py  graph_handler.sh  l1.txt  l2.txt  lab9_SorokinM_23201.odt  main.cpp
